PORT-5077: New Import Assets api connected, old logic updated

--- a/profile/config.json
+++ b/profile/config.json
@@ -10,6 +10,7 @@
         "deteBaseUrl": "https://vuapi.dev.vubiquity.com/vubiquity/dete/rest",
         "publisher": "https://vuapi.dev.vubiquity.com/vubiquity/titlespublishermovida",
         "mediaStorageUrl": "https://vuapi.dev.vubiquity.com/vubiquity/mediastorage/media-storage/v1",
+        "mediaIngestUrl": "https://vuapi.dev.vubiquity.com/vubiquity/mediaingest/media-ingest/v1",
         "service": {
             "avails": "/avails-api/v1",
             "availsParser": "/avails-parser/v1",
