--- a/package.json
+++ b/package.json
@@ -64,14 +64,11 @@
         "@atlaskit/user-picker": "^4.0.18",
         "@casl/ability": "^2.5.1",
         "@casl/react": "^0.8.1",
-        "@material-ui/core": "^3.9.3",
-        "@material-ui/icons": "^3.0.2",
         "@vubiquity-nexus/portal-assets": "^1.1.0",
         "@vubiquity-nexus/portal-auth": "1.0.0",
         "@vubiquity-nexus/portal-styles": "1.0.0",
         "@vubiquity-nexus/portal-ui": "1.0.57",
         "@vubiquity-nexus/portal-utils": "1.0.5",
-        "abortcontroller-polyfill": "^1.4.0",
         "ag-grid-community": "^25.1.0",
         "ag-grid-enterprise": "^25.1.0",
         "ag-grid-react": "^25.1.0",
@@ -128,28 +125,21 @@
         "reselect": "^4.0.0",
         "styled-components": "^3.2.6",
         "url-search-params-polyfill": "^7.0.0",
-        "uuid": "^3.3.2",
-        "whatwg-fetch": "^3.0.0"
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.1.0",
-        "@babel/plugin-proposal-class-properties": "^7.1.0",
-        "@babel/polyfill": "^7.8.3",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-react": "^7.0.0",
-        "core-js": "^3.19.3",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
         "@hot-loader/react-dom": "16.8.5",
         "@svgr/webpack": "^4.3.3",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^25.1.0",
+        "babel-jest": "^27.4.6",
         "babel-loader": "^8.0.2",
-        "babel-plugin-react-html-attrs": "2.x",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "browser-sync": "^2.24.7",
-        "browser-sync-webpack-plugin": "^2.2.2",
         "clean-webpack-plugin": "^3.0.0",
         "concurrently": "^5.3.0",
         "copy-webpack-plugin": "^4.5.2",
+        "core-js": "^3.21.0",
         "css-loader": "^5.2.7",
         "dotenv": "^15.0.0",
         "enzyme": "^3.11.0",
@@ -170,7 +160,6 @@
         "html-webpack-plugin": "^3.2.0",
         "husky": "4.3.8",
         "identity-obj-proxy": "^3.0.0",
-        "image-webpack-loader": "^4.3.1",
         "jest": "^25.1.0",
         "jest-environment-jsdom": "^25.1.0",
         "jest-react-hooks-shallow": "^1.4.1",
@@ -186,7 +175,7 @@
         "url-loader": "^4.1.1",
         "terser-webpack-plugin": "^2.3.5",
         "unorepo": "^0.1.0",
-        "webpack": "^4.6.1",
+        "webpack": "^4.46.0",
         "webpack-bundle-analyzer": "^3.7.0",
         "webpack-cli": "^3.1.1",
         "webpack-dev-server": "^3.1.9",
