--- a/package.json
+++ b/package.json
@@ -31,13 +31,9 @@
         "@atlaskit/blanket": "^10.0.14",
         "@atlaskit/button": "^13.1.1",
         "@atlaskit/checkbox": "^9.0.9",
-        "@atlaskit/code": "^11.1.5",
-        "@atlaskit/css-reset": "^5.0.12",
         "@atlaskit/datetime-picker": "^10.4.0",
         "@atlaskit/dropdown-menu": "^8.1.1",
         "@atlaskit/dynamic-table": "^14.0.1",
-        "@atlaskit/field-base": "^13.0.6",
-        "@atlaskit/flag": "^12.3.2",
         "@atlaskit/form": "8.1.4",
         "@atlaskit/icon": "^19.0.1",
         "@atlaskit/inline-edit": "^10.0.23",
@@ -46,10 +42,8 @@
         "@atlaskit/navigation": "^35.1.12",
         "@atlaskit/navigation-next": "^9.0.1",
         "@atlaskit/page": "^11.0.5",
-        "@atlaskit/page-header": "^9.0.14",
         "@atlaskit/pagination": "^12.0.9",
         "@atlaskit/popup": "^1.0.0",
-        "@atlaskit/portal": "^3.0.9",
         "@atlaskit/quick-search": "^7.6.6",
         "@atlaskit/radio": "^3.1.4",
         "@atlaskit/section-message": "^4.1.1",
@@ -77,7 +71,6 @@
         "classnames": "^2.2.6",
         "connected-react-router": "6.8.0",
         "fast-json-patch": "^3.0.0-1",
-        "file-saver": "^2.0.2",
         "js-yaml": "^3.12.0",
         "jwt-decode": "^2.2.0",
         "keycloak-js": "^9.0.2",
@@ -92,29 +85,19 @@
         "react-beautiful-dnd": "^11.0.5",
         "react-block-ui": "^1.1.3",
         "react-datepicker": "^1.6.0",
-        "react-datetime": "^2.16.3",
         "react-dom": "17.0.1",
         "react-hook-form": "7.17.5",
-        "react-transition-group": "^4.4.1",
         "react-dropzone": "^11.3.4",
-        "react-fa": "5.x",
-        "react-fontawesome": "^1.6.1",
         "react-forms-processor": "0.0.43",
         "react-forms-processor-atlaskit": "0.0.43",
         "react-ga": "^2.7.0",
         "react-global-configuration": "^1.3.0",
         "react-hot-loader": "^4.12.20",
         "react-intl": "^3.3.2",
-        "react-loaders": "^3.0.1",
         "react-multiselect-checkboxes": "^0.1.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^4.3.1",
-        "react-table": "^6.10.0",
-        "react-tagsinput": "^3.19.0",
-        "react-toggle-button": "^2.2.0",
         "react-uid": "^2.2.0",
-        "react-x-editable": "0.0.10-beta",
-        "reactjs-popup": "^1.4.2",
         "reactstrap": "^8.2.0",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.8",
@@ -123,9 +106,7 @@
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.0.5",
         "reselect": "^4.0.0",
-        "styled-components": "^3.2.6",
-        "url-search-params-polyfill": "^7.0.0",
-        "uuid": "^3.3.2"
+        "styled-components": "^3.2.6"
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
