feature/PORT-5403: Update of libraries

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
         "packages/*"
     ],
     "scripts": {
-        "start:root": "webpack-dev-server --config webpack/webpack.config.js --env.env=dev --progress --color",
+        "start:root": "webpack-dev-server --config webpack/webpack.config.js --env env=dev --progress --color",
         "start:packages": "uno watch --ignore node_modules,dist,build,bld,lib",
         "prestart": "lerna run build",
         "start": "concurrently \"yarn start:root\" \"yarn start:packages\"",
         "prebuild": "lerna run build",
-        "build": "webpack --config webpack/webpack.config.js --env.env=dev",
-        "build:local:prod": "webpack --config webpack/webpack.config.js --env.env=prod",
-        "build:analyze-prod": "webpack --config webpack/webpack.config.js --env.env=prod --env.addon=bundleanalyze --env.addon=bundlevisualizer",
-        "build:prod": "webpack --config webpack/webpack.config.js --env.env=prod && docker build . -t nexus/vehicle-ui",
+        "build": "webpack --config webpack/webpack.config.js --env env=dev",
+        "build:local:prod": "webpack --config webpack/webpack.config.js --env env=prod",
+        "build:analyze-prod": "webpack --config webpack/webpack.config.js --env env=prod --env.addon=bundleanalyze --env.addon=bundlevisualizer",
+        "build:prod": "webpack --config webpack/webpack.config.js --env env=prod && docker build . -t nexus/vehicle-ui",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage --colors",
@@ -81,7 +81,7 @@
         "primereact": "^7.1.0",
         "primeicons": "^5.0.0",
         "prop-types": "15.x",
-        "react": "16.8.5",
+        "react": "16.14.0",
         "react-beautiful-dnd": "^11.0.5",
         "react-block-ui": "^1.1.3",
         "react-datepicker": "^1.6.0",
@@ -141,26 +141,26 @@
         "html-webpack-plugin": "^3.2.0",
         "husky": "4.3.8",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^25.1.0",
-        "jest-environment-jsdom": "^25.1.0",
-        "jest-react-hooks-shallow": "^1.4.1",
+        "jest": "^27.5.1",
+        "jest-environment-jsdom": "^27.5.1",
+        "jest-react-hooks-shallow": "^1.5.1",
         "jest-transform-stub": "^2.0.0",
-        "lerna": "^3.22.1",
-        "lint-staged": "10.5.3",
-        "sass": "^1.49.0",
-        "sass-loader": "^7.1.0",
+        "lerna": "^4.0.0",
+        "lint-staged": "^12.3.3",
+        "sass": "^1.49.7",
+        "sass-loader": "^10.2.1",
         "style-loader": "^2.0.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "prettier": "2.0.5",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
+        "prettier": "^2.5.1",
         "regenerator-runtime": "^0.13.9",
         "url-loader": "^4.1.1",
-        "terser-webpack-plugin": "^2.3.5",
+        "terser-webpack-plugin": "^4.2.3",
         "unorepo": "^0.1.0",
         "webpack": "^4.46.0",
-        "webpack-bundle-analyzer": "^3.7.0",
-        "webpack-cli": "^3.1.1",
-        "webpack-dev-server": "^3.1.9",
-        "webpack-merge": "^4.2.2",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4",
+        "webpack-merge": "^5.8.0",
         "webpack-visualizer-plugin": "^0.1.11"
     },
     "husky": {
