--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
         "styled-components": "^3.2.6"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.17.0",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
@@ -126,10 +127,9 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.4",
-        "eslint": "^5.7.0",
+        "eslint": "^8.8.0",
         "eslint-config-nexus-react-app": "1.0.10",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-loader": "^2.1.1",
         "eslint-nibble": "^5.1.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -137,8 +137,8 @@
         "eslint-plugin-react-hooks": "^2.3.0",
         "eslint-plugin-react-redux": "^2.3.0",
         "eslint-webpack-plugin": "^3.1.1",
-        "file-loader": "^2.0.0",
-        "html-webpack-plugin": "^3.2.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^4.5.2",
         "husky": "4.3.8",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
