--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "build": "webpack --config webpack/webpack.config.js --env env=dev",
         "build:local:prod": "webpack --config webpack/webpack.config.js --env env=prod",
         "build:analyze-prod": "webpack --config webpack/webpack.config.js --env env=prod --env.addon=bundleanalyze --env.addon=bundlevisualizer",
-        "build:prod": "webpack --config webpack/webpack.config.js --env env=prod && docker build . -t nexus/vehicle-ui",
+        "build:prod": "webpack --config webpack/webpack.config.js --env env=prod",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage --colors",
@@ -98,34 +98,34 @@
         "react-router-dom": "^4.3.1",
         "react-uid": "^2.2.0",
         "reactstrap": "^8.2.0",
-        "redux": "^4.0.0",
-        "redux-devtools-extension": "^2.13.8",
+        "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "redux-persist": "^6.0.0",
-        "redux-saga": "^1.0.5",
-        "reselect": "^4.0.0",
-        "styled-components": "^3.2.6"
+        "redux-saga": "^1.1.3",
+        "reselect": "^4.1.5",
+        "styled-components": "^3.4.10"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.17.0",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
-        "@hot-loader/react-dom": "16.8.5",
-        "@svgr/webpack": "^4.3.3",
-        "babel-eslint": "^10.0.1",
-        "babel-jest": "^27.4.6",
-        "babel-loader": "^8.0.2",
-        "clean-webpack-plugin": "^3.0.0",
-        "concurrently": "^5.3.0",
-        "copy-webpack-plugin": "^4.5.2",
+        "@hot-loader/react-dom": "16.14.0",
+        "@svgr/webpack": "^5.5.0",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.3",
+        "clean-webpack-plugin": "^4.0.0",
+        "concurrently": "^7.0.0",
+        "copy-webpack-plugin": "^6.4.1",
         "core-js": "^3.21.0",
         "css-loader": "^5.2.7",
-        "dotenv": "^15.0.0",
+        "dotenv": "^16.0.0",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme-to-json": "^3.4.4",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "enzyme-to-json": "^3.6.2",
         "eslint": "^8.8.0",
         "eslint-config-nexus-react-app": "1.0.11",
         "eslint-config-prettier": "^6.11.0",
