feature/PORT-5531: Remove Pending RightStatus enum value

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -84,7 +84,7 @@
             "displayName": "Right Status",
             "dataType": "select",
             "searchDataType": "multiselect",
-            "options": ["Pending", "Confirmed", "Tentative", "Canceled", "Withdrawn"],
+            "options": ["Confirmed", "Tentative", "Canceled", "Withdrawn"],
             "queryParamName": "rightStatus",
             "readOnly": false,
             "enableSearch": true,
