bugfix/PORT-5554: Enhance configEndpoints caching mechanism

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -55,6 +55,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/licensors",
+            "alternateSelector": "licensor",
             "queryParamName": "licensor",
             "readOnly": false,
             "enableSearch": true,
@@ -120,6 +121,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/licensees",
+            "alternateSelector": "licensee",
             "queryParamName": "licensee",
             "readOnly": false,
             "enableSearch": true,
@@ -138,6 +140,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/licence-types",
+            "alternateSelector": "licenseType",
             "queryParamName": "licenseType",
             "readOnly": false,
             "enableSearch": true,
@@ -156,6 +159,7 @@
             "dataType": "territoryType",
             "searchDataType": "territoryType",
             "configEndpoint": "/countries",
+            "alternateSelector": "country",
             "queryParamName": "territory",
             "readOnly": false,
             "enableSearch": true,
@@ -201,6 +205,7 @@
             "displayName": "Territory Country",
             "searchDataType": "multiselect",
             "configEndpoint": "/countries",
+            "alternateSelector": "country",
             "queryParamName": "territoryCountry",
             "readOnly": true,
             "enableSearch": true,
@@ -264,6 +269,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/content-types",
+            "alternateSelector": "contentType",
             "queryParamName": "contentType",
             "readOnly": false,
             "enableSearch": true,
@@ -285,6 +291,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/formats",
+            "alternateSelector": "format",
             "queryParamName": "format",
             "readOnly": false,
             "enableSearch": true,
@@ -390,6 +397,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/production-studios",
+            "alternateSelector": "productionStudio",
             "queryParamName": "productionStudio",
             "readOnly": false,
             "enableSearch": true,
@@ -437,6 +445,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "storeLanguage",
             "readOnly": false,
             "enableSearch": true,
@@ -471,6 +480,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/license-rights-desc",
+            "alternateSelector": "licenseRightsDescription",
             "queryParamName": "licenseRightsDescription",
             "readOnly": false,
             "enableSearch": true,
@@ -483,6 +493,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/countries",
+            "alternateSelector": "country",
             "queryParamName": "territoryExcluded",
             "readOnly": false,
             "enableSearch": true,
@@ -495,6 +506,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/regions",
+            "alternateSelector": "region",
             "queryParamName": "region",
             "readOnly": false,
             "enableSearch": true,
@@ -518,6 +530,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/genres",
+            "alternateSelector": "genres",
             "queryParamName": "genres",
             "readOnly": false,
             "enableSearch": true,
@@ -541,6 +554,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/affiliates",
+            "alternateSelector": "affiliate",
             "queryParamName": "affiliate",
             "readOnly": false,
             "enableSearch": true,
@@ -553,6 +567,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/affiliates",
+            "alternateSelector": "affiliate",
             "queryParamName": "affiliateExclude",
             "readOnly": false,
             "enableSearch": true,
@@ -565,6 +580,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "assetLanguage",
             "readOnly": false,
             "enableSearch": true,
@@ -588,6 +604,7 @@
             "dataType": "audioLanguageType",
             "searchDataType": "audioLanguageType",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "audioTypeLanguage",
             "readOnly": false,
             "enableSearch": false,
@@ -599,6 +616,7 @@
             "displayName": "Audio Language",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "audioTypeLanguage",
             "readOnly": false,
             "enableSearch": true,
@@ -610,6 +628,7 @@
             "displayName": "Audio Type",
             "searchDataType": "multiselect",
             "configEndpoint": "/audio-types",
+            "alternateSelector": "audioType",
             "queryParamName": "audioType",
             "readOnly": false,
             "enableSearch": true,
@@ -634,6 +653,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "holdbackLanguage",
             "readOnly": false,
             "enableSearch": true,
@@ -646,6 +666,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "allowedLanguages",
             "readOnly": false,
             "enableSearch": true,
@@ -658,6 +679,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "requiredFulfillmentLanguages",
             "readOnly": false,
             "enableSearch": true,
@@ -923,6 +945,7 @@
             "displayName": "Rating system",
             "dataType": "select",
             "configEndpoint": "/rating-systems",
+            "alternateSelector": "ratingSystem",
             "searchDataType": "multiselect",
             "queryParamName": "ratingSystem",
             "readOnly": false,
@@ -936,6 +959,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/ratings",
+            "alternateSelector": "rating",
             "queryParamName": "ratingValue",
             "readOnly": false,
             "enableSearch": true,
@@ -1038,6 +1062,7 @@
             "dataType": "select",
             "searchDataType": "multiselect",
             "configEndpoint": "/ng-audios",
+            "alternateSelector": "ngAudio",
             "queryParamName": "ngAudio",
             "readOnly": false,
             "enableSearch": true,
@@ -1071,6 +1096,7 @@
             "displayName": "Price Type",
             "searchDataType": "multiselect",
             "configEndpoint": "/price-types",
+            "alternateSelector": "priceType",
             "queryParamName": "priceType",
             "readOnly": false,
             "enableSearch": true,
@@ -1092,6 +1118,7 @@
             "displayName": "Price Currency",
             "searchDataType": "multiselect",
             "configEndpoint": "/currencies",
+            "alternateSelector": "currencies",
             "queryParamName": "priceCurrency",
             "readOnly": false,
             "enableSearch": true,
@@ -1687,6 +1714,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "audioDescription",
             "readOnly": false,
             "enableSearch": true,
@@ -1765,6 +1793,7 @@
             "dataType": "multiselect",
             "searchDataType": "multiselect",
             "configEndpoint": "/languages",
+            "alternateSelector": "language",
             "queryParamName": "subtitles",
             "readOnly": false,
             "enableSearch": true,
