--- a/package.json
+++ b/package.json
@@ -27,34 +27,35 @@
     },
     "dependencies": {
         "@atlaskit/avatar": "^20.5.5",
+        "@atlaskit/analytics-next": "^8.3.0",
         "@atlaskit/badge": "^15.0.8",
         "@atlaskit/blanket": "^12.2.7",
         "@atlaskit/button": "^16.1.6",
         "@atlaskit/checkbox": "^12.3.8",
         "@atlaskit/datetime-picker": "^11.1.5",
-        "@atlaskit/dropdown-menu": "^8.1.1",
-        "@atlaskit/dynamic-table": "^14.0.1",
-        "@atlaskit/form": "8.1.4",
-        "@atlaskit/icon": "^19.0.1",
-        "@atlaskit/inline-edit": "^10.0.23",
-        "@atlaskit/lozenge": "^9.0.3",
-        "@atlaskit/modal-dialog": "^10.1.1",
-        "@atlaskit/navigation": "^35.1.12",
-        "@atlaskit/navigation-next": "^9.0.1",
-        "@atlaskit/page": "^11.0.5",
-        "@atlaskit/pagination": "^12.0.9",
-        "@atlaskit/popup": "^1.0.0",
-        "@atlaskit/quick-search": "^7.6.6",
-        "@atlaskit/radio": "^3.1.4",
-        "@atlaskit/section-message": "^4.1.1",
-        "@atlaskit/select": "^10.0.0",
-        "@atlaskit/spinner": "^12.1.6",
-        "@atlaskit/tag": "^9.0.10",
-        "@atlaskit/tag-group": "^9.0.5",
-        "@atlaskit/textarea": "^2.2.9",
-        "@atlaskit/textfield": "^5.0.5",
-        "@atlaskit/theme": "^9.1.6",
-        "@atlaskit/tooltip": "^15.0.14",
+        "@atlaskit/dropdown-menu": "^8.2.4",
+        "@atlaskit/dynamic-table": "^14.5.0",
+        "@atlaskit/form": "^8.5.0",
+        "@atlaskit/icon": "^21.10.3",
+        "@atlaskit/inline-edit": "^10.0.33",
+        "@atlaskit/lozenge": "^11.1.6",
+        "@atlaskit/modal-dialog": "^10.6.4",
+        "@atlaskit/navigation": "^37.0.2",
+        "@atlaskit/navigation-next": "^9.0.17",
+        "@atlaskit/page": "^12.1.2",
+        "@atlaskit/pagination": "^12.0.21",
+        "@atlaskit/popup": "^1.0.8",
+        "@atlaskit/quick-search": "^8.0.9",
+        "@atlaskit/radio": "^5.3.6",
+        "@atlaskit/section-message": "^6.1.7",
+        "@atlaskit/select": "^15.2.8",
+        "@atlaskit/spinner": "^15.1.6",
+        "@atlaskit/tag": "^11.2.5",
+        "@atlaskit/tag-group": "^10.0.11",
+        "@atlaskit/textarea": "^3.0.5",
+        "@atlaskit/textfield": "^5.1.6",
+        "@atlaskit/theme": "^12.1.3",
+        "@atlaskit/tooltip": "^16.0.4",
         "@atlaskit/user-picker": "^4.0.18",
         "@casl/ability": "^2.5.1",
         "@casl/react": "^0.8.1",
