--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,20 +13,22 @@
         "react-xml-viewer": "^1.3.0"
     },
     "peerDependencies": {
-        "@atlaskit/avatar": "^16.0.8",
-        "@atlaskit/blanket": "^10.0.14",
-        "@atlaskit/button": "^13.1.1",
-        "@atlaskit/checkbox": "^9.0.9",
-        "@atlaskit/datetime-picker": "^9.0.1",
-        "@atlaskit/dropdown-menu": "^8.1.1",
-        "@atlaskit/form": "8.1.4",
-        "@atlaskit/icon": "^19.0.1",
-        "@atlaskit/inline-edit": "^10.0.23",
-        "@atlaskit/lozenge": "^9.0.3",
-        "@atlaskit/modal-dialog": "^10.1.1",
-        "@atlaskit/navigation": "^35.1.12",
-        "@atlaskit/navigation-next": "^9.0.1",
-        "@atlaskit/page": "^11.0.5",
+        "@atlaskit/avatar": "^20.5.5",
+        "@atlaskit/analytics-next": "^8.3.0",
+        "@atlaskit/blanket": "^12.2.7",
+        "@atlaskit/button": "^16.1.6",
+        "@atlaskit/checkbox": "^12.3.8",
+        "@atlaskit/datetime-picker": "^11.1.5",
+        "@atlaskit/dropdown-menu": "^8.2.4",
+        "@atlaskit/dynamic-table": "^14.5.0",
+        "@atlaskit/form": "^8.5.0",
+        "@atlaskit/icon": "^21.10.3",
+        "@atlaskit/inline-edit": "^10.0.33",
+        "@atlaskit/lozenge": "^11.1.6",
+        "@atlaskit/modal-dialog": "^10.6.4",
+        "@atlaskit/navigation": "^37.0.2",
+        "@atlaskit/navigation-next": "^9.0.17",
+        "@atlaskit/page": "^12.1.2",
         "@atlaskit/popup": "^1.0.0",
         "@atlaskit/select": "^10.0.0",
         "@atlaskit/spinner": "^12.1.6",
@@ -41,14 +43,14 @@
         "classnames": "^2.2.6",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme-to-json": "^3.4.4",
-        "jest": "^25.1.0",
-        "jest-environment-jsdom": "^25.1.0",
-        "jest-react-hooks-shallow": "^1.4.1",
-        "lodash": "4.x",
-        "moment": "2.x",
+        "enzyme-to-json": "^3.6.2",
+        "jest": "^27.5.1",
+        "jest-environment-jsdom": "^27.5.1",
+        "jest-react-hooks-shallow": "^1.5.1",
+        "lodash": "^4.17.15",
+        "moment": "^2.22.2",
         "prop-types": "15.x",
-        "react": "16.x",
+        "react": "16.14.0",
         "react-beautiful-dnd": "^11.0.5",
         "react-forms-processor": "0.0.43",
         "react-forms-processor-atlaskit": "0.0.43",
@@ -57,8 +59,8 @@
         "react-router-dom": "^4.3.1",
         "react-uid": "^2.2.0",
         "redux-mock-store": "^1.5.4",
-        "reselect": "^4.0.0",
-        "styled-components": "^3.2.6"
+        "reselect": "^4.1.5",
+        "styled-components": "^3.4.10"
     },
     "devDependencies": {
         "@babel/cli": "^7.0.0",
