--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,10 +10,10 @@
     "peerDependencies": {
         "@casl/ability": "^2.5.1",
         "@casl/react": "^0.8.1",
-        "lodash": "4.x",
-        "moment": "2.x",
+        "lodash": "^4.17.15",
+        "moment": "^2.22.2",
         "prop-types": "15.x",
-        "react": "16.x",
+        "react": "16.14.0",
         "react-router-dom": "^4.3.1"
     },
     "devDependencies": {
