--- a/profile/configQA.json
+++ b/profile/configQA.json
@@ -40,7 +40,8 @@
             "kongMediaStorage": "/mediastorage/media-storage/v1",
             "kongVidispine": "/vidispine-api/API",
             "mediaImageServices": "/image-services/v1",
-            "titlePlanning": "/title-planning-api/v1"
+            "titlePlanning": "/title-planning-api/v1",
+            "titleResync": "/title-planning-api/v1/rights/sync"
         },
         "servicingOrdersUrl": "https://vuapi.qa.vubiquity.com/vubiquity/servicing-orders",
         "titleUrl": "https://vuapi.qa.vubiquity.com/vubiquity/titles",
