--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
         "@vubiquity-nexus/portal-styles": "1.0.0",
         "@vubiquity-nexus/portal-ui": "1.0.57",
         "@vubiquity-nexus/portal-utils": "1.0.5",
-        "ag-grid-community": "25.1.0",
-        "ag-grid-enterprise": "25.1.0",
-        "ag-grid-react": "25.1.0",
+        "ag-grid-community": "^26.2.1",
+        "ag-grid-enterprise": "^26.2.1",
+        "ag-grid-react": "26.2.0",
         "availity-reactstrap-validation": "^2.5.0",
         "bootstrap": "^5.1.3",
         "classnames": "^2.2.6",
