PORT-5647: Add selected cell renderer

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -178,7 +178,8 @@
             "enableSearch": true,
             "enableEdit": true,
             "required": true,
-            "sortable": false
+            "sortable": false,
+            "cellRenderer": "selectedCellRenderer"
         },
         {
             "javaVariableName": "territoryDateSelected",
