PORT-5647: Filtering not working

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -173,6 +173,8 @@
             "displayName": "Selected",
             "dataType": "territory.selected",
             "searchDataType": "territoryType",
+            "configEndpoint": "/countries",
+            "alternateSelector": "country",
             "queryParamName": "selected",
             "readOnly": false,
             "enableSearch": true,
