PORT-5650: fix errors in console

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,8 +38,8 @@
         "@vubiquity-nexus/portal-assets": "^1.x",
         "@vubiquity-nexus/portal-styles": "1.x",
         "@vubiquity-nexus/portal-utils": "1.x",
-        "ag-grid-enterprise": "^25.1.0",
-        "ag-grid-react": "^25.1.0",
+        "ag-grid-enterprise": "26.x",
+        "ag-grid-react": "26.x",
         "classnames": "^2.2.6",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
