--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
         "react-intl": "^3.3.2",
         "react-multiselect-checkboxes": "^0.1.1",
         "react-redux": "^7.2.0",
-        "react-router-dom": "^4.3.1",
+        "react-router-dom": "5.1.0",
         "react-uid": "^2.2.0",
         "reactstrap": "^8.2.0",
         "redux": "^4.1.2",
